--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Hewalex2MQTT-hvdb-cv for Home Assistant
-url: 'https://github.com/hvdb/hewalex2mqtt-homeassistant-add-on-cv/'
-maintainer: Henk van den Brink <https://github.com/hvdb/>
+name: Hewalex2MQTT-PCCO-Mono for Home Assistant
+url: 'https://github.com/oley83/hewalex2mqtt_olo/'
+maintainer: oley83 <https://github.com/oley83/>
