--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -15,23 +15,23 @@
 	"boot": "auto",
 	"host_network": "true",
 	"options": {
-		"mqtt_ip": "192.168.1.10",
+		"mqtt_ip": "core-mosquitto",
 		"mqtt_port": 1883,
 		"mqtt_authentication": true,
-		"mqtt_user": "mqttuser",
-		"mqtt_pass": "mqttpass",
+		"mqtt_user": "mqtt",
+		"mqtt_pass": "mqtt_narcyzowa",
 		"Device_Zps_Enabled": false,
-		"Device_Zps_Address": "192.168.1.7",
-		"Device_Zps_Port": 8899,
-		"Device_Zps_MqttTopic": "SolarBoiler",
+		"Device_Zps_Address": "192.168.0.70",
+		"Device_Zps_Port": 4196,
+		"Device_Zps_MqttTopic": "Solary",
 		"Device_Pcwu_Enabled": true,
-		"Device_Pcwu_Address": "192.168.1.93",
-		"Device_Pcwu_Port": 8899,
-		"Device_Pcwu_MqttTopic": "Heatpump",
-		"Device_Pcwu2_Enabled": true,
-		"Device_Pcwu2_Address": "192.168.1.93",
-		"Device_Pcwu2_Port": 8899,
-		"Device_Pcwu2_MqttTopic": "Heatpump2"
+		"Device_Pcwu_Address": "192.168.0.70",
+		"Device_Pcwu_Port": 4196,
+		"Device_Pcwu_MqttTopic": "Hewalex PCCO Mono 15",
+		"Device_Pcwu2_Enabled": false,
+		"Device_Pcwu2_Address": "192.168.0.70",
+		"Device_Pcwu2_Port": 4196,
+		"Device_Pcwu2_MqttTopic": "Pompa ciepla 2"
 	},
 	"schema": {
 		"mqtt_ip": "str",
