--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -27,11 +27,7 @@
 		"Device_Pcco_Enabled": true,
 		"Device_Pcco_Address": "192.168.0.70",
 		"Device_Pcco_Port": 4196,
-		"Device_Pcco_MqttTopic": "PCCO Mono",
-		"Device_Pcco2_Enabled": false,
-		"Device_Pcco2_Address": "192.168.0.70",
-		"Device_Pcco2_Port": 4196,
-		"Device_Pcco2_MqttTopic": "Pompa ciepla 2"
+		"Device_Pcco_MqttTopic": "PCCO Mono"
 	},
 	"schema": {
 		"mqtt_ip": "str",
@@ -46,10 +42,6 @@
 		"Device_Pcco_Enabled": "bool",
 		"Device_Pcco_Address": "str?",
 		"Device_Pcco_Port": "port?",
-		"Device_Pcco_MqttTopic": "str?",
-		"Device_Pcco2_Enabled": "bool",
-		"Device_Pcco2_Address": "str?",
-		"Device_Pcco2_Port": "port?",
-		"Device_Pcco2_MqttTopic": "str?"
+		"Device_Pcco_MqttTopic": "str?"
 	}
 }
