--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Hewalex2MQTT-PCCO-Mono for Home Assistant
+name: Hewalex2MQTT - PCCO Mono
 url: 'https://github.com/oley83/hewalex2mqtt_pcco/'
 maintainer: oley83 <https://github.com/oley83/>
