--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -20,6 +20,10 @@
 		"mqtt_authentication": true,
 		"mqtt_user": "mqtt",
 		"mqtt_pass": "mqtt_narcyzowa",
+		"Device_Zps_Enabled": false,
+		"Device_Zps_Address": "192.168.0.70",
+		"Device_Zps_Port": 4196,
+		"Device_Zps_MqttTopic": "Solary",
 		"Device_Pcco_Enabled": true,
 		"Device_Pcco_Address": "192.168.0.70",
 		"Device_Pcco_Port": 4196,
@@ -31,6 +35,10 @@
 		"mqtt_authentication": "bool",
 		"mqtt_user": "str?",
 		"mqtt_pass": "str?",
+		"Device_Zps_Enabled": "bool",
+		"Device_Zps_Address": "str?",
+		"Device_Zps_Port": "port?",
+		"Device_Zps_MqttTopic": "str?",
 		"Device_Pcco_Enabled": "bool",
 		"Device_Pcco_Address": "str?",
 		"Device_Pcco_Port": "port?",
