--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -20,10 +20,7 @@
 		"mqtt_authentication": true,
 		"mqtt_user": "mqtt",
 		"mqtt_pass": "mqtt_narcyzowa",
-		"Device_Zps_Enabled": false,
-		"Device_Zps_Address": "192.168.0.70",
-		"Device_Zps_Port": 4196,
-		"Device_Zps_MqttTopic": "Solary",
+		"read_only_mode": true,
 		"Device_Pcco_Enabled": true,
 		"Device_Pcco_Address": "192.168.0.70",
 		"Device_Pcco_Port": 4196,
