--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -32,10 +32,7 @@
 		"mqtt_authentication": "bool",
 		"mqtt_user": "str?",
 		"mqtt_pass": "str?",
-		"Device_Zps_Enabled": "bool",
-		"Device_Zps_Address": "str?",
-		"Device_Zps_Port": "port?",
-		"Device_Zps_MqttTopic": "str?",
+		"read_only_mode": "bool",
 		"Device_Pcco_Enabled": "bool",
 		"Device_Pcco_Address": "str?",
 		"Device_Pcco_Port": "port?",
