--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -1,6 +1,6 @@
 {
 	"name": "Hewalex2MQTT-PCCO-Mono",
-	"version": "0.0.42",
+	"version": "0.0.43",
 	"slug": "hewalex",
 	"description": "Monitoring pomp ciepła Hewalex PCCO Mono",
 	"url": "https://github.com/oley83/hewalex2mqtt_pcco/",
@@ -20,7 +20,7 @@
 		"mqtt_authentication": true,
 		"mqtt_user": "mqtt",
 		"mqtt_pass": "mqtt_narcyzowa",
-		"read_only_mode": true,
+		"Read_only_mode": true,
 		"Device_Pcco_Enabled": true,
 		"Device_Pcco_Address": "192.168.0.70",
 		"Device_Pcco_Port": 4196,
@@ -32,7 +32,7 @@
 		"mqtt_authentication": "bool",
 		"mqtt_user": "str?",
 		"mqtt_pass": "str?",
-		"read_only_mode": "bool",
+		"Read_only_mode": "bool",
 		"Device_Pcco_Enabled": "bool",
 		"Device_Pcco_Address": "str?",
 		"Device_Pcco_Port": "port?",
