--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -1,6 +1,6 @@
 {
 	"name": "Hewalex2MQTT-PCCO-Mono",
-	"version": "0.0.46",
+	"version": "0.0.47",
 	"slug": "hewalex",
 	"description": "Monitoring pomp ciepła Hewalex PCCO Mono",
 	"url": "https://github.com/oley83/hewalex2mqtt_pcco/",
@@ -21,6 +21,9 @@
 		"mqtt_user": "mqtt",
 		"mqtt_pass": "mqtt_narcyzowa",
 		"Read_only_mode": true,
+		"Serial_timeout": 10,
+  		"Max_retries": 2,
+  		"Polling_interval": 60,
 		"Device_Pcco_Enabled": true,
 		"Device_Pcco_Address": "192.168.0.70",
 		"Device_Pcco_Port": 4196,
@@ -33,9 +36,12 @@
 		"mqtt_user": "str?",
 		"mqtt_pass": "str?",
 		"Read_only_mode": "bool",
+		"Serial_timeout": "int",
+  		"Max_retries": "int",
+  		"Polling_interval": "int",
 		"Device_Pcco_Enabled": "bool",
-		"Device_Pcco_Address": "str?",
-		"Device_Pcco_Port": "port?",
-		"Device_Pcco_MqttTopic": "str?"
+		"Device_Pcco_Address": "str",
+		"Device_Pcco_Port": "port",
+		"Device_Pcco_MqttTopic": "str"
 	}
 }
