--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -1,6 +1,6 @@
 {
 	"name": "Hewalex2MQTT-PCCO-Mono",
-	"version": "0.0.47",
+	"version": "0.0.48",
 	"slug": "hewalex",
 	"description": "Monitoring pomp ciepła Hewalex PCCO Mono",
 	"url": "https://github.com/oley83/hewalex2mqtt_pcco/",
@@ -21,6 +21,7 @@
 		"mqtt_user": "mqtt",
 		"mqtt_pass": "mqtt_narcyzowa",
 		"Read_only_mode": true,
+		"Read_config_enabled": false,
 		"Serial_timeout": 10,
   		"Max_retries": 2,
   		"Polling_interval": 60,
@@ -36,6 +37,7 @@
 		"mqtt_user": "str?",
 		"mqtt_pass": "str?",
 		"Read_only_mode": "bool",
+		"Read_config_enabled": "bool",
 		"Serial_timeout": "int",
   		"Max_retries": "int",
   		"Polling_interval": "int",
