--- a/hewalex/config.json
+++ b/hewalex/config.json
@@ -22,6 +22,7 @@
 		"mqtt_pass": "mqtt_narcyzowa",
 		"Read_only_mode": true,
 		"Read_config_enabled": false,
+		"Print_mqtt_topics": false,
 		"Serial_timeout": 10,
   		"Max_retries": 2,
   		"Polling_interval": 60,
@@ -38,6 +39,7 @@
 		"mqtt_pass": "str?",
 		"Read_only_mode": "bool",
 		"Read_config_enabled": "bool",
+		"Print_mqtt_topics": "bool",
 		"Serial_timeout": "int",
   		"Max_retries": "int",
   		"Polling_interval": "int",
