Add Device_Pzhx configuration options

--- a/hewalex/config.yaml
+++ b/hewalex/config.yaml
@@ -29,7 +29,9 @@
 		"Device_Pcco_Enabled": true,
 		"Device_Pcco_Address": "192.168.0.70",
 		"Device_Pcco_Port": 4196,
-		"Device_Pcco_MqttTopic": "PCCO Mono"
+		"Device_Pcco_MqttTopic": "PCCO Mono",
+		"Device_Pzhx_Enabled": true,
+		"Device_Pzhx_MqttTopic": "PZHX Mono"
 	},
 	"schema": {
 		"mqtt_ip": "str",
@@ -46,6 +48,8 @@
 		"Device_Pcco_Enabled": "bool",
 		"Device_Pcco_Address": "str",
 		"Device_Pcco_Port": "port",
-		"Device_Pcco_MqttTopic": "str"
+		"Device_Pcco_MqttTopic": "str",
+		"Device_Pzhx_Enabled": "bool",
+		"Device_Pzhx_MqttTopic": "str"
 	}
 }
