--- a/hewalex/config.yaml
+++ b/hewalex/config.yaml
@@ -1,5 +1,5 @@
 {
-	"name": "Hewalex2MQTT-PCCO-Mono",
+	"name": "Hewalex2MQTT-PCCO-Mono_beta",
 	"version": "0.1.2",
 	"slug": "hewalex",
 	"description": "Monitoring pomp ciepła Hewalex PCCO Mono",
